--- a/config_example.json
+++ b/config_example.json
@@ -1,10 +1,18 @@
 {
-  "supported_networks": [137],
-  "137": {
+  "app_mode": "debug",
+  "port": "9000",
+  "redis": {
+    "connection_string": "",
+    "db": 0
+  },
+  "pg_connection_string": "",
+  "available_chains": {
+    "chain": "polygon",
+    "network_id": 137,
     "relayer_count": 5,
     "provider_url": "",
     "fund_amount_in_ether": 0.5,
-    "min_balance_to_fun": 0.1,
-    "private_key": ""
+    "min_balance_to_fund_in_ether": 0.1,
+    "funding_wallet_private_key": ""
   }
 }
